// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonComponent of type Anchor should render as an anchor html element with required parameters 1`] = `
<a
  aria-label="aNewAriaLabel"
  aria-labelledby="aNewArialabelledBy"
  class="cui-button cui-button--36"
  cui-button=""
  ng-reflect-active="false"
  ng-reflect-circle="false"
  ng-reflect-class=""
  ng-reflect-color=""
  ng-reflect-disabled="false"
  ng-reflect-expand="false"
  ng-reflect-href=""
  ng-reflect-loading="false"
  ng-reflect-remove-style="false"
  ng-reflect-size="36"
  ng-reflect-type="button"
  type="button"
  width=""
>
  <div>
    
    <span
      ng-reflect-ng-style="[object Object]"
      style="opacity: 1;"
    >
      Anchor
    </span>
  </div>
</a>
`;

exports[`ButtonComponent of type Button should render as a button html element with required parameters 1`] = `
<button
  aria-label="aNewAriaLabel"
  aria-labelledby="aNewArialabelledBy"
  class="cui-button cui-button--36"
  cui-button=""
  ng-reflect-active="false"
  ng-reflect-circle="false"
  ng-reflect-class=""
  ng-reflect-color=""
  ng-reflect-disabled="false"
  ng-reflect-expand="false"
  ng-reflect-loading="false"
  ng-reflect-remove-style="false"
  ng-reflect-size="36"
  ng-reflect-type="button"
  type="button"
  width=""
>
  <div>
    
    <span
      ng-reflect-ng-style="[object Object]"
      style="opacity: 1;"
    >
       Button 
    </span>
  </div>
</button>
`;

exports[`ButtonComponent of type Input should render as an anchor html element with required parameters 1`] = `
<input
  aria-label="aNewAriaLabel"
  aria-labelledby="aNewArialabelledBy"
  class="cui-button cui-button--36"
  cui-button=""
  ng-reflect-active="false"
  ng-reflect-circle="false"
  ng-reflect-class=""
  ng-reflect-color=""
  ng-reflect-disabled="false"
  ng-reflect-expand="false"
  ng-reflect-href=""
  ng-reflect-loading="false"
  ng-reflect-remove-style="false"
  ng-reflect-size="36"
  ng-reflect-type="button"
  type="button"
  width=""
>
  <div>
    
    <span
      ng-reflect-ng-style="[object Object]"
      style="opacity: 1;"
    />
  </div>
</input>
`;
